add delete user module
