# router/app.go
@@ -18,5 +18,6 @@ func Router() *gin.Engine {
 	r.GET("/index", service.GetIndex)
 	r.GET("/user/GetUserList", service.GetUserList)
 	r.GET("/user/CreateUser", service.CreateUser)
+	r.GET("/user/DeleteUser", service.DeleteUser)
 	return r
 }
